# rayda-assessment

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
eval/: case_descriptions.py  conftest.py  report.py  scorecard.py
eval/cases/: action_cases.yaml  adversarial_cases.yaml  qa_cases.yaml
eval/deterministic/: test_action_state_machine.py  test_api_tenant_isolation.py  test_approval_replay.py  test_chart_builder.py  test_email.py  test_evidence_store.py  test_evidence_validator.py  test_finding_summary.py  test_handoff.py  test_insights.py  test_mcp_prompts.py  test_mcp_tools.py  test_prompt_injection.py  test_rate_limiting.py  test_read_query_guard.py  test_repositories.py  test_review_signals.py  test_state_schema.py  test_tenant_isolation.py  test_ticket_creation.py  test_tool_payload.py  test_tool_result_ingestion.py  test_turn_store.py  test_worker_scoping.py
eval/fixtures/: ground_truth.py
eval/live/: test_agent.py
scripts/: create_database.py  run_api.py  start.ps1  start.sh
src/fleet_copilot/: __init__.py  config.py
src/fleet_copilot/agent/: checkpointer.py  graph.py  llm.py  mcp_client.py  progress.py  rate_limit.py  runtime.py  state.py  tool_payload.py  workers.py
src/fleet_copilot/api/: deps.py  llm_errors.py  main.py  schemas.py
src/fleet_copilot/domain/: action_policy.py  charts.py  enums.py  errors.py  models.py  text.py  (+1 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  actions.ts  format.ts  formatLabels.ts  routes.ts  session.ts  styles.css
(+87 files in other folders)
